style: Cleaned up code